minor clean up tasks
removing react experiments
removing old versions
removing unused js scripts

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thatbalduxguy",
+  "name": "vedranio",
   "version": "1.0.0",
   "description": "Personal portfolio site for Vedran Arnautovic",
   "main": "index.js",
