--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Vedran Arnautovic",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vedranio/vedranio.github.io"
-  },
   "author": {
     "name": "Vedran Arnautovic",
     "email": "vedran.arnautovic@gmail.com",
     "url": "vedran.io"
   },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vedranio/vedranio.github.io"
+  },
   "devDependencies": {
     "browser-sync": "^2.10.1",
     "gulp": "^3.9.0",
     "gulp-imagemin": "^3.1.1",
-    "gulp-less": "^3.0.5"
+    "gulp-less": "^3.0.5",
+    "gulp-sitemap": "^4.2.0"
   },
   "dependencies": {
     "browser-sync": "^2.10.1",
