--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "browser-sync": "^2.10.1",
+    "clipboard": "^1.6.1",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.5"
   }
