--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "gulp": "^3.9.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-less": "^3.0.5",
-    "gulp-sitemap": "^4.2.0"
+    "gulp-sitemap": "^4.2.0",
+    "gulp-postcss": "^7.0.0",
+    "gulp-sourcemaps": "^2.6.1",
+    "autoprefixer": "^7.1.4"
   },
   "dependencies": {
     "browser-sync": "^2.10.1",
