--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "clipboard": "^1.6.1",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.5"
+  },
+  "resolutions": {
+    "graceful-fs": "^4.2.10"
   }
 }
